[INTERNAL] ColumnResizer: fix auto column resize on mouse double click
- The auto size column should also consider the sort indicators. Since
the sort indicator is added via '::after' element, we now make use of
the getComputedStyle function to get the width and padding-left and
padding-right information, to add it to the column width. This will
ensure correct auto width calculation including the sort indicator.
- We also allow truncation of inner flex items for the div with class
"sapMColumnHeader". This will prevent unexpected column header overflow
and truncate as expected.
BCP: 2280094078

--- a/src/sap.m/src/sap/m/themes/base/Table.less
+++ b/src/sap.m/src/sap/m/themes/base/Table.less
@@ -364,6 +364,11 @@ tr.sapMListTblHeaderNone > .sapMTableTH {
 	outline-color: @sapUiContentContrastFocusColor;
 }
 
+// Allows truncation of text within children of a flex item.
+.sapMColumnHeaderContent {
+	min-width: 0;
+}
+
 .sapMColumnHeaderActive:active > .sapMColumnHeaderContent {
 	color: @sapUiListActiveTextColor;
 }
@@ -386,6 +391,7 @@ tr.sapMListTblHeaderNone > .sapMTableTH {
 	align-self: center;
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
+	box-sizing: border-box;
 }
 
 [aria-sort=ascending] > .sapMColumnHeader::after {
